@@ -1,5 +1,15 @@
 \name{NEWS}
 \title{ChemmineR News}
+\section{CHANGES IN VERSION 2.32.0}{
+   \subsection{NEW FEATURES}{
+		\itemize{
+			\item SDFDataTable function, allows viewing compund image and
+			data in a web browser.
+			\item read.SDFset can now skip over compounds with syntax
+			errors in sdf files.
+		}
+	}
+}
 \section{CHANGES IN VERSION 2.30.0}{
 
    \subsection{NEW FEATURES}{
